@@ -13,6 +13,7 @@ raster: add dnd to iconbox
 raster: option to turn off iconbox cover
 raster: icoify animation suport
 raster: changing virtual desktop size screws up pager content draws.
+raster: double "close sound" playing atthe moment - fix.
 raster: sound.cfg classes to add / support in theme..
 SOUND_MENU_SHOW - whenever a menu is popped up.
 SOUND_RESIZE_START - the start of any window resize
@@ -36,5 +37,4 @@ SOUND_MOVE_AREA_RIGHT - you move to the area on the right
 SOUND_MOVE_AREA_UP - you move to the area above
 SOUND_MOVE_AREA_DOWN - you move to the area below
 SOUND_MOVE_RESIST - sound made whenever a window resists movement
-
 SOUND_FOCUS_SET - when focus is set to another window...
